# cmake_amrgcc_armclang_project

./: CMakeLists.txt  CMakePresets.json  README.md  gd32_cmake.code-workspace  toolchain.cmake
.cache/clangd/index/: altcp.c.C85D16435EBAE411.idx  altcp.h.0EA02D1B9A1498A9.idx  altcp_alloc.c.C59240C072306E22.idx  altcp_tcp.c.BE1529593A77F09C.idx  api.h.7FA970764FCED226.idx  api_lib.c.070AA20AC3359A48.idx  api_msg.c.AC231151483DA67D.idx  api_msg.h.DF5DBF261335ADC0.idx  arch.h.E3826E1EDD96E3B5.idx  autoip.c.6F4AA1F606A173DB.idx  autoip.h.D8E34F934F918A7D.idx  bsp_enet.c.EF783B7D417A008C.idx  bsp_enet.h.023A2A85E3A75F47.idx  bsp_led.c.9A56E2DF22D35DE8.idx  bsp_led.h.184FCCBED15268C6.idx  bsp_uart.c.F2E03A5E9A0DD68B.idx  bsp_uart.h.D2D473E92AA4C2BC.idx  cc.h.E3E1D151128448DC.idx  cdc_acm_template.c.6544C9626645F44D.idx  config.h.F089BDBAEDC68EA9.idx  core_cm4.h.0642D158FAAE5D58.idx  core_cm4_simd.h.CF5D4C158C982D4A.idx  core_cmFunc.h.2B5EC8289DF7E242.idx  core_cmInstr.h.7CF92DB5A771AAB5.idx  debug.h.82FB63F671DEF20E.idx  def.c.2FF7B0C337847ABB.idx  def.h.AE753B4E951DD7B8.idx  dhcp.c.492214F1DC209A44.idx  dhcp.h.29DBD365461D85C4.idx  dhcp.h.85F49D3AFDDB4466.idx  dhcp6.h.7DFD5D5BF896F484.idx  dns.c.D47A2635EAC1A847.idx  dns.h.4354EFAD8069D960.idx  err.c.7F3B83F38331273F.idx  err.h.F801B8EDBF4459F9.idx  errno.h.F0F0C5D3848EE14A.idx  etharp.c.7015AB6C6EE431FF.idx  etharp.h.606EB7C6349F89C9.idx  etharp.h.E55F34376E672E0C.idx  etharp.h.EBF6D008ED2A6C70.idx  (+174 more)
app/: gd32f4xx_it.c  main.c
app/inc/: config.h  main.h
libraries/CMSIS/GD/GD32F4xx/Include/: gd32f4xx.h
libraries/CMSIS/GD/GD32F4xx/Source/ARM/: startup_gd32f407_427.s
libraries/CherryUSB-1.5.0/: usb_config.h
libraries/CherryUSB-1.5.0/demo/: cdc_acm_template.c
libraries/CherryUSB-1.5.0/port/dwc2/: usb_dc_dwc2.c
libraries/FreeRTOS-Kernel/include/: FreeRTOSConfig.h
libraries/GD32F4xx_standard_peripheral/Include/: gd32f4xx_enet.h
libraries/GD32F4xx_standard_peripheral/Source/: gd32f4xx_enet.c
libraries/fatfs/: diskio.c  ffconf.h
libraries/lwip-2.1.3/arch/: cc.h  ethernetif.c  lwipopts.h
libraries/xprintf/src/: xprintf.h
module/soft_timer/: soft_timer.c  soft_timer.h
project/: project.uvguix.crs  project.uvoptx  project.uvprojx
project/Listings/: project.map
project/Objects/: altcp.d  altcp_alloc.d  altcp_tcp.d  api_lib.d  api_msg.d  autoip.d  bsp_enet.d  bsp_fmc.d  bsp_led.d  bsp_sd.d  bsp_uart.d  croutine.d  def.d  dhcp.d  diskio.d  dns.d  err.d  etharp.d  ethernet.d  ethernetif.d  event_groups.d  ff.d  ffsystem.d  ffunicode.d  gd32f4xx_adc.d  gd32f4xx_can.d  gd32f4xx_crc.d  gd32f4xx_ctc.d  gd32f4xx_dac.d  gd32f4xx_dbg.d  gd32f4xx_dci.d  gd32f4xx_dma.d  gd32f4xx_enet.d  gd32f4xx_exmc.d  gd32f4xx_exti.d  gd32f4xx_fmc.d  gd32f4xx_fwdgt.d  gd32f4xx_gpio.d  gd32f4xx_i2c.d  gd32f4xx_ipa.d  (+60 more)
project/RTE/_Target_1/: RTE_Components.h
project/RTE/_debug/: RTE_Components.h
startup/linker_scripts/: gd32f4xx_flash.ld  link.sct
user/bsp/: bsp_enet.c  bsp_fmc.c  bsp_led.c  bsp_sd.c  bsp_uart.c  netconf.c  spi_flash.c
user/bsp/inc/: bsp_enet.h  bsp_fmc.h  bsp_led.h  bsp_sd.h  bsp_uart.h  spi_flash.h
user/sys/: sdcard.c
